resources/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: notes-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
   - host: notesap.com
     http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notesappservice
            port:
              number: 5000
